@startuml state_machine_001_finding_lifecycle
' ============================================================
' Title:     State Machine 001 — Finding Lifecycle (NORMATIVE)
' Source:    docs/spec/contracts/finding_lifecycle/states.yaml
'            docs/spec/contracts/finding_lifecycle/transitions.yaml
'            docs/spec/contracts/finding_lifecycle/sod_contract.yaml
' C4:        findings_application → finding_events_repository → finding_events_store
' Package:   findings_application / findings_domain (FindingFsm)
' Contract:  docs/standards/VERSION ============================================================

!include ./common/state_styles.puml
!include ./common/state_identities.puml

title **State Machine 001 — Finding Lifecycle**\nC4: findings_application → finding_events_repository → finding_events_store\n<size:12><i>Normative eleven-state · remediation composite · segregation of duties · system-only close</i></size>

[*] --> Created : <b>FindingCreated</b>\nactor: System (inspections_application via FindingOpenPort)\ncommand: evaluation Fail | Partial | NeedsReview\nstream: FindingCreated

state "Created" as Created $STATE_COLOR_RESOURCE : **entry** born from inspection Report\n**allowed** system auto-open only\n**forbidden** human mutation · dismiss · waive
state "Open" as Open $STATE_COLOR_RESOURCE : **entry** disposition=valid decision hub\n**allowed** acknowledge | dismiss | waive | supersede\n**forbidden** close · approve · submit evidence\n**mutex** first action is exclusive

' ---------- Hierarchical composite: remediation path ----------
state "In Remediation" as InRemediation $STATE_COLOR_RESOURCE {
  [*] --> Acknowledged
  state "Acknowledged\n(In Remedy)" as Acknowledged $STATE_COLOR_RESOURCE : **entry** remediation accepted\n**allowed** evidence.submit | Regulatory Official disposition\n**forbidden** close · approve
  state "Evidence\nSubmitted" as EvidenceSubmitted $STATE_COLOR_PROCESS : **entry** evidence actor recorded for\nsegregation of duties (evidence submitter)\n**allowed** system advance | Regulatory Official disposition\n**forbidden** human evidence mutation
  state "Pending\nVerification" as PendingVerification $STATE_COLOR_PENDING : **entry** awaits Regulatory Official decision\n**allowed** approve | reject | Regulatory Official disposition\n**forbidden** evidence resubmit · close
  state "Verified\n(Resolved)" as Verified $STATE_COLOR_STORE : **entry** remediation approved (pre-terminal)\n**allowed** system close only · atomic with RemediationApproved (INV-FL-020)\n**forbidden** human close · reopen
  state "Rejected\n(Reopen)" as Rejected $STATE_COLOR_GATE : **entry** remediation rejected\n**allowed** reopen + comments | Regulatory Official disposition\n**forbidden** approve without reopen

  Acknowledged --> EvidenceSubmitted : <b>EvidenceAccepted</b>\nactor: Compliance Representative\ncommand: evidence.submit\n[capability: evidence.submit]\n/ recordEvidenceSubmitter()\nstream: DispositionChanged\nstory: US-FL-010
  EvidenceSubmitted --> PendingVerification : <b>VerificationRequested</b>\nactor: System\ncommand: on evidence receipt\nstream: DispositionChanged
  PendingVerification --> Verified : <b>RemediationApproved</b>\nactor: Regulatory Official\ncommand: finding.approve_remediation\n[capability: finding.approve_remediation]\n[actorNotEvidenceSubmitter]\nstream: DispositionChanged\nstory: US-SD-002
  PendingVerification --> Rejected : <b>RemediationRejected</b>\nactor: Regulatory Official\ncommand: finding.reject_remediation\n[capability: finding.reject_remediation]\nstream: DispositionChanged\nstory: US-FL-010
}

state "Dismissed\n(Invalid)" as Dismissed $STATE_COLOR_TERMINAL : **entry** disposition=invalid **terminal**\n**allowed** read-only / analytics\n**forbidden** newly emit Dismissed→Closed\n**legacy** Dismissed→Closed accepted on stream replay only
state "Waived\n(Accepted Risk)" as Waived $STATE_COLOR_PENDING : **entry** disposition=waived **pre-terminal**\n**allowed** system close only · atomic with WaiverGranted (INV-FL-020)\n**forbidden** human close · reopen
state "Closed" as Closed $STATE_COLOR_TERMINAL : **entry** terminal sink\n**allowed** read-only / analytics\n**forbidden** reopen · any mutation
state "Superseded\n(Replaced)" as Superseded $STATE_COLOR_TERMINAL : **entry** disposition=superseded **terminal**\n**allowed** read-only / analytics\n**forbidden** any transition

Created --> Open : <b>Opened</b>\nactor: System\ncommand: auto-open\nstream: DispositionChanged\n/ appendAtomicallyWithFindingCreated()\n/ dispositionRemainsValid()

Open --> InRemediation : <b>AcknowledgementAccepted</b>\nactor: Compliance Representative\ncommand: finding.acknowledge\n[capability: finding.acknowledge]\nstream: DispositionChanged\nstory: US-FL-010
Open --> Dismissed : <b>DismissalDeclared</b>\nactor: Regulatory Official\ncommand: finding.dismiss\n[capability: finding.dismiss]\n/ setDispositionInvalid()\nstream: DispositionChanged\nstory: US-FL-001
Open --> Waived : <b>WaiverGranted</b>\nactor: Regulatory Official\ncommand: finding.waive\n[capability: finding.waive]\n[actorNotInCreatorProvenance]\n/ setDispositionWaived()\nstream: DispositionChanged\nstory: US-SD-001
Open --> Superseded : <b>Superseded</b>\nactor: Regulatory Official\ncommand: finding.supersede\n[capability: finding.supersede]\n[actorNotInCreatorProvenance]\n/ setDispositionSuperseded()\nstream: DispositionChanged\nstory: US-FL-012

' Regulatory Official disposition from remediation states (TR-FL-003/004/012; INV-FL-006)
Acknowledged --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
Acknowledged --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[actorNotInCreatorProvenance]\nTR-FL-004
Acknowledged --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[actorNotInCreatorProvenance]\nTR-FL-012
EvidenceSubmitted --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
EvidenceSubmitted --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[actorNotInCreatorProvenance]\nTR-FL-004
EvidenceSubmitted --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[actorNotInCreatorProvenance]\nTR-FL-012
PendingVerification --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
PendingVerification --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[actorNotInCreatorProvenance]\nTR-FL-004
PendingVerification --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[actorNotInCreatorProvenance]\nTR-FL-012
Rejected --> Dismissed : <b>DismissalDeclared</b>\n[capability: finding.dismiss]\nTR-FL-003
Rejected --> Waived : <b>WaiverGranted</b>\n[capability: finding.waive]\n[actorNotInCreatorProvenance]\nTR-FL-004
Rejected --> Superseded : <b>Superseded</b>\n[capability: finding.supersede]\n[actorNotInCreatorProvenance]\nTR-FL-012

Rejected --> Open : <b>ReopenDeclared</b>\nactor: Regulatory Official\ncommand: finding.reopen\n[capability: finding.reopen]\n[hasMandatoryComments]\nstream: DispositionChanged\nstory: US-FL-010
Verified --> Closed : <b>FindingClosed</b>\nactor: System\ncommand: auto-close\nstream: FindingClosed\n[atomicWithTriggerBatch INV-FL-020]\n/ appendAtomicallyWithRemediationApproved()
Waived --> Closed : <b>FindingClosed</b>\nactor: System\ncommand: auto-close\nstream: FindingClosed\n[atomicWithTriggerBatch INV-FL-020]\n/ appendAtomicallyWithWaiverGranted()

Dismissed --> Closed : <b>FindingClosed</b>\nactor: System\n[legacyReplayOnly]\ncommand: never newly emitted
Dismissed --> [*] : <b>Finalized</b>\nactor: System
Closed --> [*] : <b>Finalized</b>\nactor: System
Superseded --> [*] : <b>Finalized</b>\nactor: System

footer State Machine 001 · docs/standards/VERSION · findings_application · Selma

@enduml
